--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "description": "Aplicação Web de agendamento para corte de cabelo. Este é um trabalho prático da MBA Full Stack da Rocketseat.",
   "author": "Feito por Gustavo Prado, guiado pelo professor Rodrigo Gonçalves da Rocketseat",
   "scripts": {
-    "server": "json-server --watch server.json --port 3333"
+    "server": "json-server --watch server.json --port 3333",
+    "build": "webpack"
   },
   "dependencies": {
     "json-server": "^1.0.0-alpha.21"
+  },
+  "devDependencies": {
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
